--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -140,6 +140,9 @@
                     <li class="nav-item">
                         <a class="nav-link btn btn-outline-light mx-1" asp-controller="Account" asp-action="Login"><i class="fa-solid fa-arrow-right-to-bracket m-1"></i>Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-light btn-sm mx-1" asp-controller="" asp-action=""><i class="fa-solid fa-right-to-bracket m-2"></i>Sign Up</a>
+                    </li>
                 }
             </ul>
         </div>
