--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/DeleteUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/DeleteUser.cshtml
@@ -7,8 +7,10 @@
 <h1>DeleteUser</h1>
 
 <h3 class="text-white">Are you sure you want to delete this?</h3>
+<hr />
+
 <div>
-    <hr />
+    
     <dl class="row">
         <dt class = "col-sm-2 d-none">
             @Html.DisplayNameFor(model => model.IdUser)
@@ -42,7 +44,7 @@
         </dd>
     </dl>
     
-    <form asp-action="DeleteUser">
+    <form asp-action="DeleteUser" asp-route-id=@Model.IdUser>
         <input type="submit" value="Delete" class="btn btn-danger" /> | <a asp-action="GetAllUsers">Back to List</a>
         
     </form>
