--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
@@ -9,7 +9,7 @@
 <h1 class="m-4 p-4 text-center text-white"></h1>
 
 <p>
-    <a class="btn btn-primary" asp-action="Create"> <i class="fa-solid fa-plus"></i> Add New Customer</a>
+    <a class="btn btn-primary" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Customer</a>
 </p>
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
