--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/CreateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/CreateUser.cshtml
@@ -4,66 +4,67 @@
     ViewData["Title"] = "CreateUser";
 }
 
+<br/><br/><br/>
 
+<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h1 class="display-4">Space Adventures</h1>
+    <h2>Creating an internal user</h2>
+</div>
 
-
-<h1>CreateUser</h1>
-
-<h4>User</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
         <form asp-action="CreateUser">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group mb-2">
-                <label asp-for="Lastname" class="control-label text-white"></label>
-                <input asp-for="Lastname" class="form-control" />
-                <span asp-validation-for="Lastname" class="text-danger"></span>
-            </div>
-            <div class="form-group mb-2">
-                <label asp-for="Firstname" class="control-label text-white"></label>
-                <input asp-for="Firstname" class="form-control" />
-                <span asp-validation-for="Firstname" class="text-danger"></span>
-            </div>
 
-            <div class="form-group mb-2">
+            <div class="row mt-5">
+                <div class="form-group col">
+                    <label asp-for="Lastname" class="control-label text-white"></label>
+                    <input asp-for="Lastname" class="form-control" />
+                    <span asp-validation-for="Lastname" class="text-danger"></span>
+                </div>
+                    <div class="form-group col">
+                    <label asp-for="Firstname" class="control-label text-white"></label>
+                    <input asp-for="Firstname" class="form-control" />
+                    <span asp-validation-for="Firstname" class="text-danger"></span>
+                 </div>
+            </div>
+            <div class="row mt-5">
+            <div class="form-group col">
                 <label asp-for="Username" class="control-label text-white"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
-            <div class="form-group mb-2">
-                <label asp-for="Email" class="control-label text-white"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+            <div class="form-group col-lg-4">
+                <label asp-for="Password" class="control-label text-white"></label>
+                <input asp-for="Password" readonly="readonly"  value="Default Password is applicable here" class="form-control" readonly="readonly" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group" hidden="hidden">
+            </div>
+            <div class="row mt-3">
+                <div class="form-group col">
+                    <label asp-for="Email" class="control-label text-white"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group col-lg-4">
+                    <label asp-for="IdRole" class="control-label text-white">Assign a role</label>
+                    <select class="form-control" asp-items="@(new SelectList(ViewBag.ListRole, "Value", "Text"))"></select>
+@*                    @Html.DropDownListFor(x => Model.IdRole, new SelectList(ViewBag.ListRole, "Value", "Text"));*@
+                    <span asp-validation-for="IdRole" class="text-danger"></span>
+                </div>
+            </div>
+
+            @*Hidden Item*@
+            <div class="form-group d-none">
                 <label asp-for="Connection" class="control-label text-white"></label>
                 <input asp-for="Connection"  value="test" class="form-control" readonly="readonly"/>
                 <span asp-validation-for="Connection" class="text-danger"></span>
             </div>
-             <div class="form-group" hidden="hidden">
-                <label asp-for="Password" class="control-labelvtext-white"></label>
-                <input asp-for="Password"  value="test" class="form-control" readonly="readonly" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-             <div class="form-group mb-2">
-                <label asp-for="IdRole" class="control-label text-white"></label>
-                @Html.DropDownListFor(x => Model.IdRole, new SelectList(ViewBag.ListRole, "Value", "Text"));
-                <span asp-validation-for="IdRole" class="text-danger"></span>
-            </div>
-            </br>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-success" /> | <a class="btn btn-primary" asp-action="GetAllUsers">Back to List</a>
+            @*End of Hidden items*@
+
+            <div class="form-group mt-4 text-center">
+                <input type="submit" value="Create" class="btn btn-dark" /><a class="btn btn-info m-3" asp-action="GetAllUsers">Back to List</a>
             </div>
         </form>
-    </div>
-</div>
-
-</br>
-
-
-
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
