--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
@@ -5,10 +5,17 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
-<h1 class="m-4 p-4 text-center text-white"></h1>
+<br/><br/><br/>
+
+<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h1 class="display-4">Space Adventures</h1>
+    <h2>List of the platform's users</h2>
+</div>
+
+<hr/>
 
 <p>
-<a class="btn btn-primary" asp-action="CreateUser"> <i class="fa-solid fa-plus"></i> Add New User</a>
+<a class="btn btn-info" asp-action="CreateUser"> <i class="fa-solid fa-plus"></i> Add New User</a>
 </p>
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
@@ -40,7 +47,7 @@
                 @Html.DisplayFor(modelItem => item.Role)
             </td>
             <td>
-                 <a class="btn btn-success btn-sm" asp-action="UpdateUser" asp-route-Email="@item.Email">
+                 <a class="btn btn-dark btn-sm" asp-action="UpdateUser" asp-route-Email="@item.Email">
                     <i class="fa-solid fa-pen m-2"></i>
                 </a> |
                 <a class="btn btn-danger btn-sm" asp-action="DeleteUser" asp-route-email ="@item.Email">
@@ -55,12 +62,8 @@
 
 @section Scripts
 {
-
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/js/datatable.js"></script>
-    
     <script src="~/lib/toastr.js/toastr.min.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-
 }
