--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
@@ -14,7 +14,7 @@
 
 
 <hr />
-<form  id="form" asp-action="UserSignUp">
+<form  asp-action="UserSignUp">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
     <div class="row mt-5">
